--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
+*.plist
 
 # IntelliJ related
 *.iml
@@ -34,6 +35,7 @@ migrate_working_dir/
 
 # Web related
 lib/generated_plugin_registrant.dart
+lib/firebase_options.dart
 
 # Symbolication related
 app.*.symbols
