--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ migrate_working_dir/
 # Web related
 lib/generated_plugin_registrant.dart
 lib/firebase_options.dart
+web/index.html  
 
 # Symbolication related
 app.*.symbols
@@ -47,3 +48,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
